# nova-emulator

./: .gitignore  CHANGES.md  README.md  log.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: android.yml
android-app/: .gitignore  build.bat  debug.bat  install-debug.bat  log.txt  settings.gradle.kts
android-app/app/: build.gradle.kts
android-app/app/src/androidTest/java/com/jim/aetheremu/: ExampleInstrumentedTest.kt
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  native-lib.cpp.bak
android-app/app/src/main/java/com/blinkchase/nova/: Components.kt  EnhancedControlsOverlay.kt  GameLoader.kt  GameScreen.kt  MainActivity.kt  Models.kt  RomScanner.kt  Screens.kt  Utils.kt
android-app/app/src/main/java/com/blinkchase/nova/ui/theme/: Color.kt  Theme.kt  Type.kt
android-app/app/src/main/java/com/nova/: Components.kt  EnhancedControlsOverlay.kt  GameLoader.kt  GameScreen.kt  MainActivity.kt  Models.kt  RomScanner.kt  Screens.kt  Utils.kt
android-app/app/src/main/java/com/nova/ui/theme/: Color.kt  Theme.kt  Type.kt
android-app/app/src/main/res/values/: strings.xml  themes.xml
android-app/app/src/test/java/com/jim/aetheremu/: ExampleUnitTest.kt
android-app/gradle/wrapper/: gradle-wrapper.properties
examples/: .gitkeep
